# xjp-deploy-agent

./: .gitignore  Cargo.toml  DESIGN-AUTO-DISCOVERY-V2.md  DESIGN-LAN-DISCOVERY.md  DESIGN-TASK-RECOVERY.md  Dockerfile  README.md  REFACTOR_PLAN.md  docker-compose.yml  install.sh  timing-test.txt
docs/: SSH_DESIGN.md
src/: error.rs  lib.rs  main.rs
src/api/: containers.rs  database.rs  deploy.rs  health.rs  images.rs  lan.rs  mod.rs  nfa.rs  system.rs  tunnel.rs
src/config/: autoupdate.rs  env.rs  mod.rs  project.rs
src/domain/: code.rs  container.rs  database.rs  deploy.rs  mod.rs  ssh.rs  system.rs  tunnel.rs
src/infra/: command.rs  deploy_center.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/services/: autoupdate.rs  frp.rs  log_reporter.rs  mesh.rs  mod.rs  nfa.rs  queue_persistence.rs  restart.rs  service_router.rs  windows_service.rs
src/services/deploy/: context.rs  docker_build.rs  docker_compose.rs  mod.rs  script.rs  xiaojincut.rs
src/services/lan_discovery/: mod.rs
src/services/ssh/: mod.rs  server.rs  session.rs
src/services/tunnel/: client.rs  mod.rs  server.rs
src/state/: app_state.rs  log_hub.rs  mod.rs  port_listener_manager.rs  task_store.rs  tunnel_state.rs
