[package]
name = "xjp-deploy-agent"
version = "0.2.1"
edition = "2021"
description = "Deploy agent for private cloud - triggers builds and streams logs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for callback)
reqwest = { version = "0.12", features = ["json"] }

# Async stream
async-stream = "0.3"
